Atualiza index com seção Quem Somos e Ilhéus

--- a/index.html
+++ b/index.html
@@ -2,6 +2,92 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ERBTEC Manutenção Fitness</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #002244;
+      color: white;
+    }
+    header, section, footer {
+      text-align: center;
+      padding: 40px 20px;
+    }
+    header img {
+      width: 150px;
+    }
+    .btn-whatsapp {
+      display: inline-block;
+      background-color: #25d366;
+      color: white;
+      padding: 12px 20px;
+      text-decoration: none;
+      border-radius: 8px;
+      font-weight: bold;
+    }
+    section {
+      background-color: #f4f4f4;
+      color: #333;
+    }
+    h2 {
+      margin-top: 0;
+    }
+    footer {
+      background-color: #001d3d;
+      color: #fff;
+      font-size: 14px;
+    }
+    .container {
+      max-width: 800px;
+      margin: auto;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <img src="logo-erbtec-fitness.jpg" alt="Logo ERBTEC">
+    <h1>ERBTEC Manutenção Fitness</h1>
+    <p>Manutenção elétrica, mecânica e eletrônica de equipamentos de academias</p>
+  </header>
+
+  <section>
+    <div class="container">
+      <h2>Serviços que oferecemos</h2>
+      <p>
+        • Esteiras ergométricas<br>
+        • Bicicletas<br>
+        • Elípticos<br>
+        • Aparelhos de musculação<br>
+        • Manutenção preventiva e corretiva<br>
+        • Contratos ou atendimentos avulsos
+      </p>
+      <a class="btn-whatsapp" href="https://wa.me/5573999592654" target="_blank">
+        Fale conosco pelo WhatsApp
+      </a>
+    </div>
+  </section>
+
+  <section>
+    <div class="container">
+      <h2>Quem somos</h2>
+      <p>
+        A ERBTEC é uma empresa especializada em manutenção de equipamentos para academias, com atuação na cidade de Ilhéus e região.
+        Nossa missão é oferecer soluções com qualidade, agilidade e segurança nas áreas elétrica, mecânica e eletrônica, garantindo o bom funcionamento e prolongando a vida útil dos seus equipamentos.
+      </p>
+    </div>
+  </section>
+
+  <footer>
+    © 2025 ERBTEC FITNESS • Ilhéus e Região • Contato: erbtecmanut.eletrica@gmail.com
+  </footer>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>ERBTEC Manutenção Fitness</title>
   <style>
