--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ERBTEC Manutenção Fitness</title>
   <style>
     body {
-      margin: 0;
       font-family: Arial, sans-serif;
+      margin: 0;
       background-color: #002244;
       color: white;
     }
@@ -18,30 +18,30 @@
     header img {
       width: 150px;
     }
-    .btn-whatsapp {
-      display: inline-block;
-      background-color: #25d366;
-      color: white;
-      padding: 12px 20px;
-      text-decoration: none;
-      border-radius: 8px;
-      font-weight: bold;
-    }
     section {
       background-color: #f4f4f4;
       color: #333;
     }
-    h2 {
-      margin-top: 0;
+    h1, h2 {
+      margin-bottom: 20px;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+    .btn-whatsapp {
+      display: inline-block;
+      background-color: #25d366;
+      color: white;
+      padding: 15px 30px;
+      border-radius: 5px;
+      text-decoration: none;
+      font-size: 16px;
+      margin-top: 20px;
     }
     footer {
-      background-color: #001d3d;
-      color: #fff;
+      background-color: #001122;
       font-size: 14px;
-    }
-    .container {
-      max-width: 800px;
-      margin: auto;
     }
   </style>
 </head>
@@ -53,101 +53,26 @@
   </header>
 
   <section>
-    <div class="container">
-      <h2>Serviços que oferecemos</h2>
-      <p>
-        • Esteiras ergométricas<br>
-        • Bicicletas<br>
-        • Elípticos<br>
-        • Aparelhos de musculação<br>
-        • Manutenção preventiva e corretiva<br>
-        • Contratos ou atendimentos avulsos
-      </p>
-      <a class="btn-whatsapp" href="https://wa.me/5573999592654" target="_blank">
-        Fale conosco pelo WhatsApp
-      </a>
-    </div>
+    <h2>Quem Somos</h2>
+    <p>A ERBTEC é especializada em manutenção preventiva e corretiva de equipamentos fitness com agilidade e excelência.</p>
   </section>
 
   <section>
-    <div class="container">
-      <h2>Quem somos</h2>
-      <p>
-        A ERBTEC é uma empresa especializada em manutenção de equipamentos para academias, com atuação na cidade de Ilhéus e região.
-        Nossa missão é oferecer soluções com qualidade, agilidade e segurança nas áreas elétrica, mecânica e eletrônica, garantindo o bom funcionamento e prolongando a vida útil dos seus equipamentos.
-      </p>
-    </div>
+    <h2>Atendemos Ilhéus e Região</h2>
+    <p>Com serviços de qualidade, oferecemos suporte completo na área elétrica e mecânica, prolongando a vida útil dos seus equipamentos.</p>
+  </section>
+
+  <section>
+    <h2>Serviços que oferecemos</h2>
+    <ul>
+      <li>Esteiras ergométricas • Bicicletas • Elípticos • Aparelhos de musculação</li>
+      <li>Manutenção preventiva e corretiva • Contratos ou atendimentos avulsos</li>
+    </ul>
+    <a class="btn-whatsapp" href="https://wa.me/5573999592654" target="_blank">Fale conosco pelo WhatsApp</a>
   </section>
 
   <footer>
     © 2025 ERBTEC FITNESS • Ilhéus e Região • Contato: erbtecmanut.eletrica@gmail.com
-  </footer>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ERBTEC Manutenção Fitness</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background: #f5f5f5;
-      color: #333;
-      text-align: center;
-    }
-    header {
-      background-color: #002244;
-      color: white;
-      padding: 2rem 1rem;
-    }
-    header img {
-      width: 150px;
-      margin-bottom: 1rem;
-    }
-    section {
-      padding: 2rem 1rem;
-    }
-    a.botao {
-      display: inline-block;
-      background: #25d366;
-      color: white;
-      padding: 1rem 2rem;
-      border-radius: 8px;
-      text-decoration: none;
-      font-size: 1.1rem;
-      margin-top: 1rem;
-    }
-    a.botao:hover {
-      background: #1eb84c;
-    }
-    footer {
-      background: #002244;
-      color: #fff;
-      padding: 1rem;
-      font-size: 0.9rem;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <img src="logo-erbtec-fitness.jpg" alt="Logo ERBTEC Fitness" />
-    <h1>ERBTEC Manutenção Fitness</h1>
-    <p>Manutenção elétrica, mecânica e eletrônica de equipamentos de academias</p>
-  </header>
-
-  <section>
-    <h2>Serviços que oferecemos</h2>
-    <p>• Esteiras ergométricas • Bicicletas • Elípticos • Aparelhos de musculação<br>
-       • Manutenção preventiva e corretiva • Contratos ou atendimentos avulsos</p>
-
-    <a class="botao" href="https://wa.me/5573999592654" target="_blank">Fale conosco pelo WhatsApp</a>
-  </section>
-
-  <footer>
-    © 2025 ERBTEC FITNESS • Contato: erbtecmanut.eletrica@gmail.com
   </footer>
 </body>
 </html>
