--- a/index.html
+++ b/index.html
@@ -2,123 +2,78 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ERBTEC Manutenção Fitness</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background-color: #f4f4f4;
-      color: #333;
-    }
-    header {
-      background-color: #002244;
-      text-align: center;
-      padding: 40px 20px;
-    }
-    header img {
-      max-width: 180px;
-      margin-bottom: 10px;
-    }
-    header h1 {
-      color: #fff;
-      font-size: 28px;
-    }
-    .subheader {
-      color: #ddd;
-      font-size: 16px;
-      margin-top: 10px;
-    }
-    main {
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 40px 20px;
-    }
-    section {
-      margin-bottom: 40px;
-    }
-    h2 {
-      color: #002244;
-      font-size: 22px;
-      border-bottom: 2px solid #25D366;
-      display: inline-block;
-      margin-bottom: 10px;
-    }
-    p, li {
-      font-size: 16px;
-      line-height: 1.6;
-    }
-    ul {
-      padding-left: 20px;
-    }
-    .whatsapp-button {
-      display: inline-block;
-      background-color: #25D366;
-      color: white;
-      padding: 14px 24px;
-      border-radius: 6px;
-      text-decoration: none;
-      font-weight: bold;
-      font-size: 16px;
-      margin-top: 20px;
-    }
-    .contact {
-      text-align: center;
-    }
-    footer {
-      background-color: #002244;
-      color: white;
-      text-align: center;
-      padding: 20px;
-      font-size: 14px;
-    }
-    @media (max-width: 600px) {
-      header h1 {
-        font-size: 22px;
-      }
-      .whatsapp-button {
-        font-size: 14px;
-        padding: 10px 20px;
-      }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ERBTEC Manutenção Fitness</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            background-color: #002244;
+            color: white;
+            text-align: center;
+        }
+        header, section, footer {
+            padding: 40px 20px;
+        }
+        header img {
+            width: 180px;
+        }
+        section {
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        h1, h2 {
+            margin-bottom: 20px;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        .whatsapp-button {
+            background-color: #25d366;
+            color: white;
+            padding: 15px 30px;
+            text-decoration: none;
+            font-size: 18px;
+            border-radius: 10px;
+            display: inline-block;
+            margin-top: 20px;
+        }
+        footer {
+            background-color: #001122;
+            font-size: 14px;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <img src="logo-erbtec-fitness.jpg" alt="Logo ERBTEC">
-    <h1>ERBTEC Manutenção Fitness</h1>
-    <div class="subheader">Manutenção elétrica, mecânica e eletrônica de equipamentos de academias</div>
-  </header>
-  <main>
+    <header>
+        <img src="logo-erbtec-fitness.jpg" alt="Logo ERBTEC">
+        <h1>ERBTEC Manutenção Fitness</h1>
+        <p>Manutenção elétrica, mecânica e eletrônica de equipamentos de academias</p>
+    </header>
+
     <section>
-      <h2>Quem Somos</h2>
-      <p>
-        A <strong>ERBTEC</strong> é especializada em manutenção preventiva e corretiva de equipamentos fitness com agilidade e excelência.
-        Atendemos <strong>Ilhéus e Região</strong> com serviços de qualidade, oferecendo suporte completo nas áreas elétrica, mecânica e eletrônica, prolongando a vida útil dos seus equipamentos.
-      </p>
+        <h2>Quem Somos</h2>
+        <p>A ERBTEC é especializada em manutenção preventiva e corretiva de equipamentos fitness com agilidade e excelência.</p>
+        <p>Atendemos Ilhéus e Região</p>
+        <p>Com serviços de qualidade, oferecemos suporte completo na área elétrica e mecânica, prolongando a vida útil dos seus equipamentos.</p>
+
+        <h2>Serviços que oferecemos</h2>
+        <ul>
+            <li>• Esteiras ergométricas</li>
+            <li>• Bicicletas</li>
+            <li>• Elípticos</li>
+            <li>• Aparelhos de musculação</li>
+            <li>• Manutenção preventiva e corretiva</li>
+            <li>• Contratos ou atendimentos avulsos</li>
+        </ul>
+
+        <a class="whatsapp-button" href="https://wa.me/5573999592654" target="_blank">Fale conosco pelo WhatsApp</a>
     </section>
-    <section>
-      <h2>Serviços que Oferecemos</h2>
-      <ul>
-        <li>Esteiras ergométricas</li>
-        <li>Bicicletas ergométricas</li>
-        <li>Elípticos</li>
-        <li>Aparelhos de musculação</li>
-        <li>Manutenção preventiva e corretiva</li>
-        <li>Contratos de manutenção ou atendimentos avulsos</li>
-      </ul>
-    </section>
-    <section class="contact">
-      <a class="whatsapp-button" href="https://wa.me/5573999592654" target="_blank">
-        Fale conosco pelo WhatsApp
-      </a>
-      <p>Email: <a href="mailto:erbtecmanut.eletrica@gmail.com">erbtecmanut.eletrica@gmail.com</a></p>
-      <p>Cidade: Ilhéus • Atuação: Ilhéus e Região</p>
-    </section>
-  </main>
-  <footer>
-    © 2025 ERBTEC FITNESS • Ilhéus e Região • Contato: erbtecmanut.eletrica@gmail.com
-  </footer>
+
+    <footer>
+        © 2025 ERBTEC FITNESS • Ilhéus e Região • Contato: erbtecmanut.eletrica@gmail.com
+    </footer>
 </body>
 </html>
